<resources>

    <!--Generelt -->
    <string name="main_title">Romplan</string>
    <string name="splash_title">"Romplan for "</string>
    <string name="app_title">Romplan</string>
    <string name="load_data_string">Henter data…</string>
    <string name="load_data_string_multiple_mins">Henter data, dette kan ta et par minutter…</string>
    <string name="add_elem_to_fav">\u0020er lagt til i favoritter</string>
    <string name="remove_elem_from_fav">\u0020er fjernet fra favoritter</string>

    <string name="uni_bergen">Universitetet i Bergen</string>
    <string name="uni_oslo">Universitetet i Oslo</string>
    <string name="uni_tromso">UiT Norges arktiske universitet</string>
    <string name="ntnu">Norges teknisk-naturvitenskapelige universitet</string>
    <string name="oslomet">OsloMet – storbyuniversitetet</string>


    <!--UniCampusActivity -->
    <string name="unicampus_chosen_area">har blitt valgt</string>
    <string name="unicampus_choose_area">Velg et område på</string>

    <!--BuildingMainActivity -->
    <string name="action_search">Søk</string>
    <string name="action_settings">Innstillinger</string>
    <string name="search_buildings">Søk etter bygninger…</string>
    <string name="tab_buildings">BYGNINGER</string>
    <string name="tab_favorites">FAVORITTER</string>
    <string name="title_activity_settings">Innstillinger</string>


    <!--RoomsActivity -->

    <!--WeekCalendarActivity -->
    <string name="event_no_descript">Ingen beskrivelse</string>
    <string name="event_cancel">Tilbake</string>
    <string name="event_added">Hendelsen vil bli lagt til i kalenderen din.</string>
    <string name="week">Uke</string>
    <string name="building">Bygning</string>
    <string name="something_wrong">Noe gikk galt, prøv å laste inn rommet på nytt.</string>
    <string name="mazemap">Innendørskart</string>
    <string name="mazemap_goto_url">Vis i nettleser</string>

    <!--SettingsActivity -->
    <string name="pref_title">Innstillinger</string>
    <string name="pref_clear_cache">Velg et annet universitet</string>
    <string name="pref_about">Om</string>
    <string name="pref_about_text_1">Dataen i denne applikasjonen blir hentet fra: </string>
    <string name="pref_about_text_2">Kildekoden finnes på:</string>
    <string name="pref_about_text_3">Kildekoden finnes på åpent på GitHub: </string>
    <string name="pref_version">Versjon</string>
    <string name="pref_language">Språk</string>
    <string name="pref_libs">Tredjepartsbiblioteker</string>
    <string name="pref_license_title">Lisenser</string>
    <string name="pref_change_uni">Er du sikker på at du vil endre universitet? </string>
    <string name="pref_change_uni_1"> All data vil slettes og du må laste det inn på nytt igjen. </string>
    <string name="pref_change_uni_2">Gå videre</string>
    <string name="pref_change_uni_3">Tilbake</string>

    <string name="pref_about_us">Om utviklerene</string>
    <string name="pref_about_us_text_1">"Appen er utviklet av to tidligere studenter i "</string>
    <string name="pref_about_us_text_info_science_url"><a href="http://www.uib.no/studieprogram/BASV-INFO" target="_top">Informasjonsvitenskap</a></string>

    <string name="pref_about_us_text_2">ved Universitetet i Bergen.</string>
    <string name="pref_about_us_text_3">Utviklerene</string>
    <string name="pref_about_us_text_4" translatable="false">Edvard Pires Bjørgen</string>
    <string name="pref_about_us_text_5" translatable="false">Fredrik Vonheim Heimsæter</string>
    <string name="pref_about_us_text_6">Denne appen er ikke utviklet eller offisielt fra noen av de omtalte universitetene.</string>


    <!-- Licenses -->

    <string name="pref_license_androidweekview" translatable="false">Copyright 2014 Raquib-ul-Alam
        \n Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at \n

   http://www.apache.org/licenses/LICENSE-2.0
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <string name="pref_license_gson" translatable="false">
        Copyright 2008 Google Inc.
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
    http://www.apache.org/licenses/LICENSE-2.0
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>

    <string name="pref_license_picasso" translatable="false">
Copyright 2013 Square, Inc.
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
   http://www.apache.org/licenses/LICENSE-2.0
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>

    <string name="pref_license_picassotrans" translatable="false">
Copyright 2015 Wasabeef
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
   http://www.apache.org/licenses/LICENSE-2.0
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>

    <string name="pref_license_rounded" translatable="false">
Copyright 2015 Vincent Mi
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
   http://www.apache.org/licenses/LICENSE-2.0
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="all_buildings">Alle bygninger</string>
    <string name="favorites">Favoritter</string>
    <string name="error_timeout">Tilkoblingen tok for lang tid, prøv igjen</string>
    <string name="android_week_view" translatable="false">Android Week View</string>
    <string name="android_week_view_url" translatable="false">https://github.com/thellmund/Android-Week-View</string>
    <string name="google_gson" translatable="false">Google GSON</string>
    <string name="google_gson_url" translatable="false">github.com/google/gson</string>
    <string name="picasso" translatable="false">Picasso</string>
    <string name="picasso_url" translatable="false">square.github.io/picasso/</string>
    <string name="picasso_tranformation" translatable="false">Picasso Tranformation</string>
    <string name="picasso_tranformation_url" translatable="false">github.com/wasabeef/picasso-transformations</string>
    <string name="roundedimageview" translatable="false">RoundedImageView</string>
    <string name="roundedimageview_url" translatable="false">github.com/vinc3m1/RoundedImageView</string>
    <string name="searchview" translatable="false">SearchView</string>
    <string name="searchview_url" translatable="false">github.com/lapism/SearchView</string>
    <string name="romsjekkeren_uib" translatable="false">Romsjekkeren UiB</string>
    <string name="romsjekkerenuib_url" translatable="false">github.com/gauteremen/romsjekkerenUiB</string>
    <string name="tp_url" translatable="false">tp.uio.no</string>
    <string name="github_repo_url" translatable="false">github.com/eddiman/Romplan_UiB</string>
    <string name="pref_privacy_policy">Personvernerklæring</string>
    <string name="pref_privacy_policy_text">Romplan lagrer ikke persondata. Anonymisert bruksstatistikk blir brukt for å forbedre tjenesten.</string>


</resources>
