<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <TextView
            android:text="@string/pref_about_us"
            android:fontFamily="sans-serif-thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/secondary_text_white"
            android:layout_marginBottom="16dp"
            />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            >

            <TextView
                android:text="@string/pref_about_us_text_1"
                android:id="@+id/pref_about_us_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_white"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:text="@string/pref_about_us_text_info_science_url"
                android:layout_width="wrap_content"
                android:id="@+id/pref_about_us_text_2"
                android:layout_toEndOf="@+id/pref_about_us_text_1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="2dp"
                android:textColor="@color/secondary_text_white"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:textColorLink="@color/accent_blue"
                android:clickable="true"
                />
            <TextView
                android:text="@string/pref_about_us_text_2"
                android:id="@+id/pref_about_us_text_3"
                android:layout_below="@+id/pref_about_us_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_white"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/pref_about_us_text_4"
                android:text="@string/pref_about_us_text_3"
                android:layout_width="wrap_content"
                android:layout_below="@+id/pref_about_us_text_3"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/secondary_text_white"
                android:fontFamily="sans-serif-thin"
                />

            <TextView
                android:text="@string/pref_about_us_text_4"
                android:id="@+id/pref_about_us_text_5"
                android:layout_below="@+id/pref_about_us_text_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_white"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:text="@string/pref_about_us_text_5"
                android:id="@+id/pref_about_us_text_6"
                android:layout_below="@+id/pref_about_us_text_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_white"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:text="@string/pref_about_us_text_6"
                android:id="@+id/pref_about_us_text_7"
                android:layout_below="@+id/pref_about_us_text_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_white"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                />







        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>